gitlab-config/virtual-service/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab
  namespace: gitlab
spec:
  hosts:
    - "gitlab.cipher.lab.local"
  gateways:
    - istio-system/wildcard-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gitlab-webservice-default
            port:
              number: 8181
